# foresight

./: .gitignore  .install.sh.swp  .qglviewer.xml  CMakeLists.txt  README.md  install.sh  package.xml
cfg/: PID.cfg
config/: car_rviz.rviz  px4fmu-v2_default.px4  rviz.rviz
launch/: april_localization.launch  atal.launch  autonomous_landing.launch  camera_calibration.launch  localization.launch  lsd_localization.launch  quad.launch  visual_odom.launch
models/: back_camera_mount.scad  back_camera_mount.stl  odroid_mount.scad  odroid_mount.stl  protected_stereo_mount.scad  protected_stereo_mount.stl  stereo_mount.scad  stereo_mount.stl  uwb_horizontal_mount.scad  uwb_horizontal_mount.stl  uwb_quadrotor_mount.scad  uwb_quadrotor_mount.stl  vicon_attachment.dxf  vicon_attachment.scad
msg/: ForesightState.msg  PoseArrayWithTimes.msg  PoseStampedWithTime.msg  TreeSearchResultMsg.msg
nodes/: add_ls_intensity.py  apriltags_tf.py  blind_spots.py  camproj.py  error_measurement.py  fake_car.py  frontier_cloud.py  frontier_polygons.py  geometry.py  hovering.py  imu_offset_broadcaster.py  imu_offset_publisher.py  imu_tf.py  info_planner.py  joystick_command_center.py  land.py  landing2.py  moveit_test.py  odom_covariance.py  ompl_test.py  pd_controller.py  point.py  polygon_to_obstacle.py  pose_to_tf.py  position_controller.py  publish_trajectory.py  px4flow_odom.py  quad_uwb_sim.py  range_filter.py  relative_odom_publisher.py  rrt_planner.py  search.py  server.py  setpoint_test.py  test_rrt.py  test_setpoints.py  tf_to_multiarray.py  tf_to_pose.py  trajectory_test.py  vicon_fake_car_transforms.py  (+2 more)
param/: bebop_config.yaml  camera.yaml  head_camera.yaml  left.yaml  logitech_usb_camera.yaml  planner.yaml  px4.params  px4_config.yaml  px4_plugins.yaml  right.yaml
scripts/: april_localization.py  apriltags_pose.py  apriltags_tf.py  land.sh  localization.py  lsd_localization.py  odom_to_pose.py  pairedtimeseries.py  pid_position_control.py  px4flow_odom.py  range_filter.py  takeoff.sh  tf_to_pose.py
(+61 files in other folders)
